config-root/namespaces/jx-staging/nodey489/deployment.yaml
# Source: nodey489/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodey489-nodey489
  labels:
    draft: draft-app
    chart: "nodey489-1.0.3"
    gitops.jenkins-x.io/pipeline: 'environment'
  namespace: jx-staging
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: nodey489-nodey489
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: nodey489-nodey489
    spec:
      containers:
      - name: nodey489
        image: "10.97.239.29/myproject/nodey489:1.0.3"
        imagePullPolicy: IfNotPresent
        envFrom: null
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 400m
            memory: 256Mi
          requests:
            cpu: 200m
            memory: 128Mi
      terminationGracePeriodSeconds:
