config-root/namespaces/jx-staging/nodey489/service.yaml
# Source: nodey489/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodey489
  labels:
    chart: "nodey489-1.0.1"
    gitops.jenkins-x.io/pipeline: 'environment'
  annotations:
    fabric8.io/expose: "true"
    fabric8.io/ingress.annotations: 'kubernetes.io/ingress.class: nginx'
  namespace: jx-staging
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: nodey489-nodey489
