config-root/namespaces/jx-staging/nodey489/ingress.yaml
# Source: nodey489/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: nodey489
  namespace: jx-staging
  labels:
    gitops.jenkins-x.io/pipeline: 'environment'
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: nodey489
          servicePort: 80
    host: nodey489-jx.192.168.64.4.nip.io
